--- a/сss/stule.css
+++ b/сss/stule.css
@@ -14,7 +14,7 @@ width: 100%;
 }
 
 .container{
-width: 1200px;
+width: 1600px;
 padding: 0 15px;
 margin: 0 auto;
 }
@@ -43,14 +43,17 @@ padding-bottom: 25px;
 
 .navigation-list{
 display: flex;
-margin-right: 320px;   
+margin-right: 305px;   
 }
 
-.navigation-list li{
-margin: 0;
-padding: 0;
+.navigation-list li:nth-child(2){
 margin-left: 50px;
+margin-right: 50px;
+padding: 0;
+
 }
+
+
 
 .navigation-list-link:hover,
 .navigation-list-link:focus{
@@ -66,6 +69,7 @@ font-size: 26px;
 line-height: 1.192;
 letter-spacing: 0.03em;
 color: #2196F3;
+margin-right: 93px;
 }
 
 .communication-icon{
@@ -122,6 +126,7 @@ color: #2196F3;
     display: flex;
     align-items: center;
     font-family: Roboto;
+    font-weight: 500;
     font-style: normal;
     font-size: 14px;
     line-height: 16px;
@@ -148,7 +153,9 @@ height: 600px;
 padding: 0 15px;
 margin: 0 auto;
 }
-
+.main{
+    display: block;
+}
 .about{
 height: 600px;
 background-image: linear-gradient(
@@ -156,9 +163,9 @@ rgba(47, 48, 58, 0.4),
 rgba(47, 48, 58, 0.4)),
 url(../img/mein/fon.jpg);
 background-repeat: no-repeat; 
-width: 1200px;
+/* width: 1200px;
 padding: 0 15px;
-margin: 0 auto;
+margin: 0 auto; */
 }
 .about-title{
 font-family: Roboto;
@@ -195,7 +202,7 @@ border:none;
 
 /* <!---функции--> */
 .about-function{
-background-color: #E5E5E5;
+background-color: #FFFFFF;
 padding-top: 94px;
 }
 .about-list{
@@ -250,7 +257,7 @@ color: #757575;
 /* <!---чем ми занимаемся--> */
 
 .about-hero{
-background-color: #E5E5E5;
+background-color: #FFFFFF;
 padding: 94px 0px 94px;
 }
 
@@ -336,7 +343,7 @@ flex-wrap: wrap;
         .social-networks{
 width: 44px;
 height: 44px;
-background-color: #FFFFFF;
+background-color: rgba(255, 255, 255, 0.1);
 border-radius: 50%;
 display: flex;
 justify-content: center;
@@ -628,7 +635,6 @@ padding-bottom: 9px;
     font-size: 14px;
     line-height: 16px;
     letter-spacing: 0.03em;
-    text-transform: uppercase;
     color: #FFFFFF;
     padding-bottom: 20px;
     }
@@ -645,7 +651,7 @@ padding-bottom: 9px;
         display: flex;
     }
     .social-networks-svg-footer{
-        fill: #AFB1B8;
+        fill: #ffffff;
         height: 20px;
         width: 20px;
     }
