--- a/сss/stule.css
+++ b/сss/stule.css
@@ -19,10 +19,11 @@ padding: 0 15px;
 margin: 0 auto;
 }
 
-.navigation-logo-color {
+/* .navigation-logo-color {
 color: #212121;
-}
+} */
 .navigation-list-link{
+position: relative;
 font-family: Roboto;
 font-style: normal;
 font-weight: 500;
@@ -55,9 +56,10 @@ padding: 0;
 
 
 
-.navigation-list-link:hover,
-.navigation-list-link:focus{
+.navigation-list-link:hover::after,
+.navigation-list-link:focus::after{
 color: #2196F3;
+opacity: 1 ;
 }
 
 
@@ -70,6 +72,18 @@ line-height: 1.192;
 letter-spacing: 0.03em;
 color: #2196F3;
 margin-right: 93px;
+}
+.navigation-list-link::after{
+content:"" ;
+position: absolute;
+bottom: 0;
+left: 0;
+width: 100%;
+height: 4px;
+ opacity: 0;
+
+background: #2196F3;
+border-radius: 2px;
 }
 
 .communication-icon{
@@ -154,6 +168,7 @@ padding: 0 15px;
 margin: 0 auto;
 }
 .main{
+    margin-top: 80px;
     display: block;
 }
 .about{
@@ -162,7 +177,7 @@ background-image: linear-gradient(
 rgba(47, 48, 58, 0.4),
 rgba(47, 48, 58, 0.4)),
 url(../img/mein/fon.jpg);
-background-repeat: no-repeat; 
+
 /* width: 1200px;
 padding: 0 15px;
 margin: 0 auto; */
@@ -663,8 +678,34 @@ padding-bottom: 9px;
     fill: #FFFFFF;
     }
 
-
-
+.backdrop{
+position: fixed;
+display: flex;
+justify-content: center;
+    align-items: center;
+align-items: center;
+width: 100%;
+height: 100%;
+left: 0px;
+top: 0px;
+background-color: rgba(0, 0, 0, 0.2);
+}
+.modal{
+position: fixed;
+margin: 0 auto;
+width: 528px;
+height: 581px;
+left: 536px;
+top: 221px;
+background: #FFFFFF;
+box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
+border-radius: 4px;
+}
+.modal.is-hidden{
+        display: 0;
+    pointer-events: none;
+}
+ 
 
 
 
