--- a/сss/stule.css
+++ b/сss/stule.css
@@ -7,10 +7,16 @@
 
 .header{
 background-color:  #FFFFFF;
-position: relative;
+
 border-bottom: 1px solid #EEEEEE;
 position: fixed;
 width: 100%;
+left: 0;
+right: 0;
+top: 0;
+height: 80px;
+display: flex;
+align-items: center;
 }
 
 .container{
@@ -19,9 +25,9 @@ padding: 0 15px;
 margin: 0 auto;
 }
 
-/* .navigation-logo-color {
+.navigation-logo-color {
 color: #212121;
-} */
+}
 .navigation-list-link{
 position: relative;
 font-family: Roboto;
@@ -73,28 +79,25 @@ letter-spacing: 0.03em;
 color: #2196F3;
 margin-right: 93px;
 }
-.navigation-list-link::after{
-content:"" ;
-position: absolute;
-bottom: 0;
-left: 0;
-width: 100%;
-height: 4px;
- opacity: 0;
 
-background: #2196F3;
-border-radius: 2px;
+.navigation-list-link::after {
+    content: "";
+    position: absolute;
+    bottom: -30px;
+    left: 0;
+    width: 100%;
+    height: 4px;
+    opacity: 0;
+    background: #2196F3;
+    border-radius: 2px;
 }
-
 .communication-icon{
     display: flex;
     justify-content: center;
     align-items: center;
     /* padding-left: 10px; */
 }
-/* .communication-icon:hover{
-    color: #2196F3;
-} */
+
 .communication {
     display: flex;
     align-items: center;
@@ -106,9 +109,33 @@ border-radius: 2px;
     fill: #757575;
     transition: 0.3s;
 }
-.communication-icon:hover  {
+
+.communication-icon:hover,
+.communication-icon:focus{
     fill: #2196F3;
 }
+.communication-icon:focus
+
+.communication:hover,
+.communication-icon{
+    fill: #2196F3;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 .contact{
 display: flex;
@@ -364,7 +391,8 @@ display: flex;
 justify-content: center;
 align-items: center;
  }
-.social-networks:hover{
+.social-networks:hover,
+.social-networks:focus{
 background-color: #2196F3;
 }
     
@@ -377,7 +405,7 @@ background-color: #2196F3;
 
         /* Постоянные клиенты */
         .clients{
-            background-color: #E5E5E5;
+            background-color: #ffffff;
             padding: 94px 0px 94px;
         }
         .clients-title{
@@ -390,13 +418,13 @@ background-color: #2196F3;
           color:#212121;
           padding-bottom: 50px;
         }       
-        .clients-icon{
-            display: flex;
- flex-wrap: wrap;
+.clients-icon{
+display: flex;
+flex-wrap: wrap;
 margin-left: -30px;
 margin-top: -30px; 
 justify-content: center;
-        }
+ }
 .clients-icon-logo{
 display: flex;
 justify-content:space-between;
@@ -410,7 +438,7 @@ width: 170px;
 .icon-svg{
 width: 170px;
 height: 90px;
-background: #E5E5E5;
+background: #FFFFFF;
 margin-bottom: 30px;
 display: flex;
 justify-content: center;
@@ -420,22 +448,25 @@ box-sizing: border-box;
 border-radius: 4px;
 }
 
-.icon-svg:hover .logo-svg{
+.icon-svg:hover .logo-svg,
+.icon-svg:focus .logo-svg{
 fill:  #2196F3;
-
 }
-.icon-svg:hover {
-    border-color:  #2196F3;
+
+.icon-svg:hover,
+.icon-svg:focus{
+border-color:  #2196F3;
     }
 
 
 
 .logo-svg{
-  fill: #AFB1B8;
-    justify-content: center;
+fill: #AFB1B8;
+justify-content: center;
 }
-.logo-svg:hover:{
-    color: #2196F3;
+.logo-svg:hover,
+.logo-svg:focus{
+color: #2196F3;
 }
 
 
@@ -443,7 +474,6 @@ fill:  #2196F3;
 
 .about-box-list-item{
     margin-right: 8px;
-
 }
 
 .box-modal-btn:hover,
@@ -465,15 +495,13 @@ background-color: #2196F3;
 
 
 
-
-
 .title{
 justify-content: space-evenly;
 }
 
 /* основная часть портфолио */
 .box{
-    padding-top: 94px;
+    padding-top: 80px;
 }
 .about-box{
 background-attachment: #E5E5E5;
@@ -483,6 +511,7 @@ background-attachment: #E5E5E5;
     justify-self: center;
     justify-content: center;   
     margin-bottom: 50px; 
+    padding-top: 94px;
 }
 .justify-content{
     padding-left: 8px;
@@ -544,7 +573,8 @@ color: #757575;
     
 }
 
-.border-links-item:hover{
+.border-links-item:hover,
+.border-links-item:focus{
     box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
 }
 .border-box{
@@ -682,13 +712,14 @@ padding-bottom: 9px;
 position: fixed;
 display: flex;
 justify-content: center;
-    align-items: center;
 align-items: center;
 width: 100%;
 height: 100%;
 left: 0px;
 top: 0px;
 background-color: rgba(0, 0, 0, 0.2);
+visibility: hidden;
+appearance: none;
 }
 .modal{
 position: fixed;
