--- a/сss/stule.css
+++ b/сss/stule.css
@@ -118,6 +118,7 @@ transition: 0.3s;
 .communication li:nth-child(2){
     padding-left: 30px;
 }
+
 ul.communication li:hover a {
     color:#2196F3;
 }
@@ -353,27 +354,27 @@ background-color: #2196F3;
 }
 
         /* Постоянные клиенты */
-        .clients{
-            background-color: #ffffff;
-            padding: 94px 0px 94px;
-        }
-        .clients-title{
-          font-family: Roboto;
-          font-style: normal;
-          font-weight: bold;
-          font-size: 36px;
-          text-align: center;
-          letter-spacing: 0.03em;
-          color:#212121;
-          padding-bottom: 50px;
-        }       
+.clients{
+ background-color: #ffffff;
+ padding: 94px 0px 94px;
+ }
+.clients-title{
+font-family: Roboto;
+font-style: normal;
+font-weight: bold;
+font-size: 36px;
+text-align: center;
+letter-spacing: 0.03em;
+color:#212121;
+padding-bottom: 50px;
+}       
 .clients-icon{
 display: flex;
 flex-wrap: wrap;
 margin-left: -30px;
 margin-top: -30px; 
 justify-content: center;
- }
+}
 .clients-icon-logo{
 display: flex;
 justify-content:space-between;
@@ -382,30 +383,50 @@ margin-left: 30px;
 margin-top: 30px;
 width: 170px;
 }
+.clients-icon-logo a {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
 
-
-.icon-svg{
+.clients-icon li{
 width: 170px;
 height: 90px;
 background: #FFFFFF;
 margin-bottom: 30px;
 display: flex;
 justify-content: center;
- align-items: center;      
+align-items: center;      
 border: 1px solid #AFB1B8;
 box-sizing: border-box;
 border-radius: 4px;
+margin: 30px 15px 0px;
 }
 
-.icon-svg:hover .logo-svg,
-.icon-svg:focus .logo-svg{
+.icon-svg:hover .logo-svg
+{
 fill:  #2196F3;
 }
 
-.icon-svg:hover,
-.icon-svg:focus{
-border-color:  #2196F3;
-    }
+/* ХОВЕР ПОСТОЯННЫЕ КЛИЕНТЫ */
+.clients-icon li:hover  {
+   border-color: #2196F3;
+}
+ul.clients-icon li:hover a .logo-svg{
+    fill: #2196F3;
+}
+
+/* фокус ПОСТОЯННЫЕ КЛИЕНТЫ */
+.clients-icon :focus li {
+    border-color: #2196F3;
+ }
+ ul.clients-icon li a:focus  .logo-svg{
+     fill: #2196F3;
+ }
+
+
 
 
 
@@ -413,10 +434,7 @@ border-color:  #2196F3;
 fill: #AFB1B8;
 justify-content: center;
 }
-/* .logo-svg:hover,
-.logo-svg:focus{
-color: #2196F3;
-} */
+
 
 
 
