--- a/сss/stule.css
+++ b/сss/stule.css
@@ -37,7 +37,12 @@ font-size: 14px;
 line-height: 1.142;
 letter-spacing: 0.02em;
 color: #212121;
+transition: 0.3s;
+padding: 31px 0;
 }
+
+
+
 
 /* Display flax */
 .navigation{
@@ -65,32 +70,43 @@ padding: 0;
 .navigation-list-link:hover::after,
 .navigation-list-link:focus::after{
 color: #2196F3;
-opacity: 1 ;
 }
 
 
-.logo{
-font-family: Raleway;
-font-style: normal;
-font-weight: bold;
-font-size: 26px;
-line-height: 1.192;
-letter-spacing: 0.03em;
-color: #2196F3;
-margin-right: 93px;
-}
+
 
 .navigation-list-link::after {
 content: "";
 position: absolute;
-bottom: -30px;
+bottom: 0px;
 left: 0;
 width: 100%;
 height: 4px;
 opacity: 0;
-background: #2196F3;
-border-radius: 2px;
+background-color: #2196F3;
+border-radius: 2px;    
+
+
+
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
 }
+.logo{
+    font-family: Raleway;
+    font-style: normal;
+    font-weight: bold;
+    font-size: 26px;
+    line-height: 1.192;
+    letter-spacing: 0.03em;
+    color: #2196F3;
+    margin-right: 93px;
+    }
 
 /* ховер тел почта иконки */
 .communication{
