--- a/сss/stule.css
+++ b/сss/stule.css
@@ -67,36 +67,31 @@ padding: 0;
 
 
 
+.navigation-list-link :hover,
+.navigation-list-link :focus{
+color: #2196F3;
+}
 .navigation-list-link:hover::after,
 .navigation-list-link:focus::after{
 color: #2196F3;
+opacity: 1;
 }
-
-
-
-
 .navigation-list-link::after {
 content: "";
 position: absolute;
-bottom: 0px;
+bottom: 0;
 left: 0;
 width: 100%;
 height: 4px;
-opacity: 0;
 background-color: #2196F3;
-border-radius: 2px;    
-
-
-
- 
- 
- 
- 
- 
- 
- 
- 
+opacity: 0;
+transition: width, cubic-bezier(0.4, 0, 0.2, 1) 0.25s;
 }
+
+
+
+
+
 .logo{
     font-family: Raleway;
     font-style: normal;
