--- a/сss/stule.css
+++ b/сss/stule.css
@@ -87,8 +87,26 @@ background-color: #2196F3;
 opacity: 0;
 transition: width, cubic-bezier(0.4, 0, 0.2, 1) 0.25s;
 }
-
-
+/* .current:hover::after {
+content: "";
+position: absolute;
+bottom: 0;
+left: 0;
+width: 100%;
+height: 4px;
+background-color: #2196F3;
+opacity: 1;
+} */
+.navigation-list-link .current::after {
+    content: "";
+    position: absolute;
+    bottom: 0px;
+    left: 0;
+    width: 100%;
+    height: 4px;
+    opacity: 0;
+    background-color: #2196F3;
+    border-radius: 2px;}
 
 
 
@@ -400,6 +418,10 @@ width: 170px;
     display: flex;
     align-items: center;
     justify-content: center;
+    border: 1px solid #AFB1B8;
+    border-radius: 4px;
+
+
 }
 
 .clients-icon li{
@@ -410,9 +432,9 @@ margin-bottom: 30px;
 display: flex;
 justify-content: center;
 align-items: center;      
-border: 1px solid #AFB1B8;
+/* border: 1px solid #AFB1B8; */
 box-sizing: border-box;
-border-radius: 4px;
+/* border-radius: 4px; */
 margin: 30px 15px 0px;
 }
 
@@ -422,7 +444,7 @@ fill:  #2196F3;
 }
 
 /* ХОВЕР ПОСТОЯННЫЕ КЛИЕНТЫ */
-.clients-icon li:hover  {
+.clients-icon-logo a:hover  {
    border-color: #2196F3;
 }
 ul.clients-icon li:hover a .logo-svg{
@@ -430,7 +452,7 @@ ul.clients-icon li:hover a .logo-svg{
 }
 
 /* фокус ПОСТОЯННЫЕ КЛИЕНТЫ */
-.clients-icon :focus li {
+.clients-icon-logo :focus a {
     border-color: #2196F3;
  }
  ul.clients-icon li a:focus  .logo-svg{
@@ -696,7 +718,11 @@ height: 100%;
 left: 0px;
 top: 0px;
 background-color: rgba(0, 0, 0, 0.2);
-visibility: hidden;
+
+}
+
+.backdrop.is-hidden{
+    visibility: hidden;
 appearance: none;
 }
 .modal{
