--- a/сss/stule.css
+++ b/сss/stule.css
@@ -62,7 +62,6 @@ margin-right: 275px;
 margin-left: 50px;
 margin-right: 50px;
 padding: 0;
-
 }
 
 
@@ -74,7 +73,7 @@ color: #2196F3;
 .navigation-list-link:hover::after,
 .navigation-list-link:focus::after{
 color: #2196F3;
-opacity: 1;
+ 
 }
 .navigation-list-link::after {
 content: "";
@@ -84,27 +83,18 @@ left: 0;
 width: 100%;
 height: 4px;
 background-color: #2196F3;
-opacity: 0;
 transition: width, cubic-bezier(0.4, 0, 0.2, 1) 0.25s;
+opacity: 0;
 }
-/* .current:hover::after {
-content: "";
-position: absolute;
-bottom: 0;
-left: 0;
-width: 100%;
-height: 4px;
-background-color: #2196F3;
-opacity: 1;
-} */
-.navigation-list-link .current::after {
+
+  .current::after {
     content: "";
     position: absolute;
     bottom: 0px;
     left: 0;
     width: 100%;
     height: 4px;
-    opacity: 0;
+    opacity: 1;
     background-color: #2196F3;
     border-radius: 2px;}
 
@@ -722,7 +712,7 @@ background-color: rgba(0, 0, 0, 0.2);
 }
 
 .backdrop.is-hidden{
-    visibility: hidden;
+visibility: hidden;
 appearance: none;
 }
 .modal{
